# Hello_django

./: Makefile  db.sqlite3  pyproject.toml
hello_django/: settings.py  urls.py  views.py
hello_django/calc/: models.py  views.py
hello_django/calc/migrations/: 0001_initial.py
hello_django/calc/templates/calc/: history.html  index.html
tests/: test_hello_django.py
