[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["Mark Ionin <ioninmark91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
